src/test/deca/context/valid/ContextAvecObjet/DeclMeth/declMethArgs.deca
// Description:
//    Déclaration d'une méthode avec plusieurs arguments
//
// Resultats:
//    ok
//
class A{

    float x;

    void setX(int y, float z, boolean a, Object O, Object OB){
        x = y*z;
    }
}
